# comlipy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENCE  Pipfile  README.md  config-comlipy.yml  pyproject.toml  setup.py
Formula/: comlipy.rb
comlipy/: config-comlipy.yml  hook_template.py  main.py
comlipy/lib/: color.py  config.py  ensure.py  install.py  message.py  messages.py  parser.py  rule_checker.py  validator.py
comlipy/lib/rules/: abstract_rule.py  abstract_rules.py  body_case.py  body_empty.py  body_leading_blank.py  body_max_length.py  body_max_line_length.py  body_min_length.py  footer_empty.py  footer_leading_blank.py  footer_max_length.py  footer_max_line_length.py  footer_min_length.py  header_case.py  header_full_stop.py  header_max_length.py  header_min_length.py  scope_case.py  scope_empty.py  scope_enum.py  scope_max_length.py  scope_min_length.py  subject_case.py  subject_empty.py  subject_full_stop.py  subject_max_length.py  subject_min_length.py  type_case.py  type_empty.py  type_enum.py  type_max_length.py  type_min_length.py
comlipy/tests/: __init__.py  ensure_test.py  string.py
comlipy/tests/lib/: test_ensure.py  test_rule_checker.py
docs/: commit-msg.sample  reference-cli.md  reference-ignores.md  reference-rules.md
