[tool.poetry]
name = "comlipy"
version = "1.2.1"
description = "comlipy by slashplus - lint commit messages with python"
authors = ["slashplus <info@slashplus.de>"]
maintainers = ["slashplus <info@slashplus.de>"]
readme = "README.md"
homepage = "https://gitlab.com/slashplus-build/comlipy/"
repository = "https://gitlab.com/slashplus-build/comlipy/"
documentation = "https://gitlab.com/slashplus-build/comlipy/tree/master/docs"
keywords = ["linting, git, git-hooks, commit-msg"]
license = "MIT"
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development',
    'Topic :: Software Development :: Build Tools',
    'Topic :: System :: Systems Administration',
]

[tool.poetry.dependencies]
python = ">=3.7"
click = "==7.0"
pyyaml = "==5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
comlipy = 'comlipy.main:cli'
comlipy-install = 'comlipy.main:install'
